--- a/project/templates/signup.html
+++ b/project/templates/signup.html
@@ -374,7 +374,7 @@ section .color:nth-child(3)
             <div class="square" style="--i:4"></div>
             <div class="container">
                 <div class="form">
-                    <h2>Login Form</h2>
+                    <h2> Registration Form </h2>
                     <form method="POST" action="/signup">
                         {% with messages = get_flashed_messages() %}
                         {% if messages %}
