--- a/project/templates/patient/patient.html
+++ b/project/templates/patient/patient.html
@@ -1493,7 +1493,7 @@ html{
                   
                   <h3>{{doctor[0]}} {{doctor[1]}}  </h3>
                   <br>
-                  <h2>Fees : {{doctor[2]}} </h3>
+                  <h2>Fees : {{doctor[2]}} USD</h3>
                   <br>
                   <p> <i class="fas fa-map-marker-alt"></i> &nbsp; {{doctor[3]}}</p>
 
